updated readme + removing some extra files